--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+div {
+    background-image: url("https://www.teahub.io/photos/full/1-19957_high-quality-nice-hd-wallpapers-reta-familia-free.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+    background-color: rgb(250, 241, 241);
+    color: #17bde6;
+    display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main {
+    background: transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.loader {
+    width: 250px;
+    height: 250px;
+    background: transparent;
 }
 
-.App-link {
-  color: #61dafb;
+.navitems h2 {
+    margin-left: 10%;
+    font-size: 30px;
+    display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+    width: 1000px;
+    height: 200px;
+}
+
+.btn {
+    margin-left: 80%;
+    float: right;
+    margin: 18px;
+    background-image: linear-gradient(to bottom, #e2b3ee, #ca87f1);
+    border-radius: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    padding: 10px 20px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-image: -webkit-linear-gradient(top, #17bde6, #7df8c5);
+    text-decoration: none;
+    box-shadow: 2px 2px 2px 2px grey;
+}
+
+.main {
+    display: inline-grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.avatar {
+    border-radius: 50%;
+}
+
+.userGrid {
+    border-radius: 7%;
+    background-image: linear-gradient(rgb(141, 245, 210), rgb(25, 194, 166), rgb(8, 94, 79));
+    margin: 50px;
+    padding: 20px;
+    text-align: center;
+    transition: transform 0.2s;
+    cursor: pointer;
+}
+
+.userGrid p {
+    font-weight: 500;
+}
+
+.userGrid:hover {
+    transform: scale(1.06);
+    transition-duration: 0.5;
+    box-shadow: 3px 13px 15px rgb(194, 115, 194);
 }
